css/style.css
/* ... */
button:not(:hover) {
    background-color: var(--main-color);
    transition: background-color 0.18s linear;
}

/* Base table styles */
.results-table {
    width: 100%;
    border-collapse: collapse;
    margin-top: 20px;
    font-family: monospace;
    font-size: 14px;
    border-color: black;
}

.results-table th,
.results-table td {
    padding: 12px;
    text-align: left;
    border: 1px solid black;
}

.results-table td[colspan] {
    text-align: center;
    padding: 20px;
}

.results-table th {
    background-color: var(--table-dark);
    font-weight: bold;
}

.results-table tr:nth-child(odd) {
    background-color: var(--table-darker);
}

.results-table tr:nth-child(even) {
    background-color: var(--table-dark);
}

/* Normal search table */
.results-table:not(.res-hotspot-table):not(.highest-price-table) th:nth-child(1),
.results-table:not(.res-hotspot-table):not(.highest-price-table) td:nth-child(1) {
    width: 150px;
    min-width: 150px;
}

.results-table:not(.res-hotspot-table):not(.highest-price-table) th:nth-child(2),
.results-table:not(.res-hotspot-table):not(.highest-price-table) td:nth-child(2) {
    width: 80px;
    min-width: 80px;
}

.results-table:not(.res-hotspot-table):not(.highest-price-table) th:nth-child(3),
.results-table:not(.res-hotspot-table):not(.highest-price-table) td:nth-child(3) {
    width: 350px;
    min-width: 350px;
}

.results-table:not(.res-hotspot-table):not(.highest-price-table) th:nth-child(4),
.results-table:not(.res-hotspot-table):not(.highest-price-table) td:nth-child(4) {
    width: 500px;
    min-width: 500px;
}

.results-table:not(.res-hotspot-table):not(.highest-price-table) th:nth-child(5),
.results-table:not(.res-hotspot-table):not(.highest-price-table) td:nth-child(5) {
    width: 100px;
    min-width: 100px;
}

.results-table:not(.res-hotspot-table):not(.highest-price-table) th:nth-child(6),
.results-table:not(.res-hotspot-table):not(.highest-price-table) td:nth-child(6) {
    width: 220px;
    min-width: 220px;
}

/* RES hotspots table */
.results-table.res-hotspot-table td:nth-child(1),
.results-table.res-hotspot-table th:nth-child(1) {
    width: 150px;
}

.results-table.res-hotspot-table td:nth-child(2),
.results-table.res-hotspot-table th:nth-child(2) {
    width: 120px;
}

.results-table.res-hotspot-table td:nth-child(3),
.results-table.res-hotspot-table th:nth-child(3) {
    width: 80px;
}

.results-table.res-hotspot-table td:nth-child(4),
.results-table.res-hotspot-table th:nth-child(4) {
    width: 150px;
}

.results-table.res-hotspot-table td:nth-child(5),
.results-table.res-hotspot-table th:nth-child(5) {
    width: 100px;
}

.results-table.res-hotspot-table td:nth-child(6),
.results-table.res-hotspot-table th:nth-child(6) {
    width: 150px;
}

.results-table.res-hotspot-table td:nth-child(7),
.results-table.res-hotspot-table th:nth-child(7) {
    width: 150px;
}

.results-table.res-hotspot-table td:nth-child(8),
.results-table.res-hotspot-table th:nth-child(8) {
    width: 300px;
}

/* Highest price table */
.results-table.highest-price-table td:nth-child(1),
.results-table.highest-price-table th:nth-child(1) {
    width: 80px;
}

.results-table.highest-price-table td:nth-child(2),
.results-table.highest-price-table th:nth-child(2) {
    width: 80px;
}

.results-table.highest-price-table td:nth-child(3),
.results-table.highest-price-table th:nth-child(3) {
    width: 60px;
}

.results-table.highest-price-table td:nth-child(4),
.results-table.highest-price-table th:nth-child(4) {
    width: 100px;
}

.results-table.highest-price-table td:nth-child(5),
.results-table.highest-price-table th:nth-child(5) {
    width: 120px;
}

.results-table.highest-price-table td:nth-child(6),
.results-table.highest-price-table th:nth-child(6) {
    width: 40px;
}

.results-table.highest-price-table td:nth-child(7),
.results-table.highest-price-table th:nth-child(7) {
    width: 60px;
}

.results-table.highest-price-table td:nth-child(8),
.results-table.highest-price-table th:nth-child(8) {
    width: 60px;
}

.results-table.highest-price-table td:nth-child(9),
.results-table.highest-price-table th:nth-child(9) {
    width: 100px;
}

.results-table.highest-price-table td:nth-child(10),
.results-table.highest-price-table th:nth-child(10) {
    width: 80px;
}

.results-table.highest-price-table td:nth-child(11),
.results-table.highest-price-table th:nth-child(11) {
    width: 60px;
}

.signal-list,
.station-list {
    list-style: none;
}

.signal-list li,
.station-list li {
    padding: 4px 0;
}

.station-list li {
    position: relative;
    padding: 2px 0;
}

.station-name {
    display: flex;
    align-items: center;
}

.station-icon {
    width: 16px;
    height: 16px;
    vertical-align: middle;
    margin-right: 5px;
    filter: brightness(0) invert(1) drop-shadow(0 0 1px rgba(255, 255, 255, 0.8));
    margin-top: -0.2em;
}

.station-icon path[fill="#FFFFFF"],
.station-icon rect[fill="#FFFFFF"] {
    fill-opacity: 1.5;
}

.station-details {
    margin-left: 8px;
    position: relative;
    padding-left: 10px;
    margin-top: 4px;
    padding-bottom: 4px;
    color: #ff6600;
}

.station-details:before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    height: calc(100% - 15px);
    width: 1px;
    background-color: var(--main-color);
}

.station-details div {
    position: relative;
    padding-left: 5px;
    margin-top: 4px;
}

.station-details div:before {
    content: "";
    position: absolute;
    left: -10px;
    top: 50%;
    width: 10px;
    height: 1px;
    background-color: var(--main-color);
}

.station-details div:last-child {
    margin-bottom: 0;
}

.station-details .update-time {
    font-size: 0.9em;
    opacity: 0.8;
    font-style: italic;
}

#systemAutocomplete {
    position: relative;
}
/* ... */

